2007-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* acinclude.m4, gen83xx/:
	added support for MPC83xx controllers and MPC8349EAMDS board
	
2007-07-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* acinclude.m4, shared/irq/irq_asm.S, shared/irq/irq.c,
	* shared/vectors/vectors_entry.S, shared/vectors/vectors.h,
	* shared/vectors/vectors_init.c, shared/vectors/vectors.S:
	converted various BSP specific implementations into a more general
	"shared" one

2007-07-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* virtex/:
	integrated "virtex" BSP to support PPC core implemented in a
	Xilinx virtex FPGA

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/uboot_dump_bdinfo.c: New file.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* psim/tools/runtest: Do not run pppd.exe from batch mode script.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* shared/start/rtems_crti.S: Remove unnecessary include of libcpu/io.h.

2007-04-09	Thomas Doerfler |Thomas.Doerfler@embedded-brains.de>

	* shared/motorola/motorola.c,shared/openpic/openpic.c, 
	* shared/pci/detect_raven_bridge.c, shared/pci/pci.c:
	adapted to detect/use MVME2400

2007-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/pci/pci.c: More stdint.h fixed-size types.

2007-03-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/bootloader/bootldr.h, shared/bootloader/em86.c,
	shared/bootloader/pci.c, shared/bootloader/pci.h,
	shared/irq/irq_init.c, shared/pci/detect_raven_bridge.c,
	shared/pci/pci.c, shared/pci/pcifinddevice.c:
	Use stdint.h fixed-size types.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* shared/startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2007-01-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/VMEConfig.h:
	Added more comments about the semantics of the various
	symbols BSPs should define in this file.